Fix album button hidden below audio player if screen height is too small

--- a/src/public/styles/song/song-detail.css
+++ b/src/public/styles/song/song-detail.css
@@ -140,3 +140,7 @@
 .button-play svg, .button-pause svg {
     width: 100%;
 }
+
+.extra-padding {
+    padding-bottom: 9.375rem;
+}
